name:                game
version:             0.1.0.0
license-file:        LICENSE
author:              Silvan Eelman, Jasper Weyne
maintainer:          j.weyne@students.uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable game
  main-is:             Main.hs
  other-modules:       
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  hs-source-dirs:      src
  default-language:    Haskell2010